--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!--* Inizio Lavoro -->
+    <!--* Inizio Lavoro header -->
     <header>
         <div>
             <!--* titolo -->
@@ -32,6 +32,55 @@
             </table>
         </div>
     </header>
+    <hr>
+    <!--* lavoro centrale main -->
+    <main>
+        <!--* prima sezione -->
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <!--* testata della tabella -->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!--* corpo della tabella -->
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <th>Biglietto aereo</th>
+                        <th>120€</th>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <th>Biglietto aereo</th>
+                        <th>120€</th>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <th>Biglietto aereo</th>
+                        <th>120€</th>
+                    </tr>
+                </tbody>
+                <!--* fine della tabella -->
+                <tfoot>
+                    <tr>
+                        <th>Totale</th>
+                        <th></th>
+                        <th>360€</th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+        <!--* fine della tabella -->
+        <hr>
+        <section>
+<!--* inizio lista non ordinata -->
+        </section>
+    </main>
 </body>
 
 </html>
