--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!--* fine della tabella -->
         <hr>
         <section>
-            <!--* inizio lista non ordinata -->
+            <!--* lista non ordinata -->
             <h3>Cose da fare</h3>
             <ul>
                 <li>Visitare la tower of London &#10008;</li>
@@ -88,7 +88,36 @@
             </ul>
         </section>
         <hr>
+        <!--* lista ordinata -->
+        <section>
+            <h3>Info utili:</h3>
+            <div>
+                <!--*  utility Numbers -->
+                <ol>
+                    <li>Numeri utili di emergenza</li>
+                    <ul>
+                        <li><strong>999</strong>-Emergenza</li>
+                        <li><strong>101</strong>-Numero polizia</li>
+                        <li><strong>111</strong>-Numero assistenza medica</li>
+                    </ul>
+                    <!--* dati hotel -->
+                    <li>Hotel</li>
+                    <ul>
+                        <li><strong>Nome hotel:</strong>Buckingham Palace</li>
+                        <li><strong> Indirizzo hotel:</strong>Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                    <!--* dati partenza -->
+                    <li>Aereo</li>
+                    <ul>
+                        <li><strong>Volo di Andata:</strong>YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong> Volo di Ritorno:</strong>YI234X, ore 18.30 da Londra Heathrow</li>
+                    </ul>
+                </ol>
+            </div>
+        </section>
     </main>
+    <hr>
+    <!--* inizio footer -->
 </body>
 
 </html>
